feat: implement rest call to get product infos